# job-link-logger

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  job_link_logger.py  pyproject.toml  requirements.txt  ~$job_links.xlsx
.github/workflows/: ci.yml
job_link_logger/: cli.py  config.py  config_loader.py
tests/: test_extract.py
